# apriltag_localization

./: CMakeLists.txt  nodelet_plugins.xml  package.xml
app/: apriltag_localization.cpp  apriltage_localization_with_camera_node.cpp  fake_odom_nodelet.cpp  image_nodelet.cpp
apriltag_localization/: CMakeLists.txt  package.xml
apriltag_localization/app/: apriltag_localization.cpp  apriltage_localization_node.cpp  apriltage_localization_with_camera_node.cpp  fake_odom_node.cpp  image_nodelet.cpp  image_nodelet_node.cpp
apriltag_localization/config/: cam1.yaml  d455.yaml  settings.yaml  tags.yaml
apriltag_localization/include/apriltag_localization/: pose_estimator.h
apriltag_localization/include/apriltag_localization/apriltag_ros/: common_functions.h
apriltag_localization/include/apriltag_localization/kkl/alg/: unscented_kalman_filter.hpp
apriltag_localization/launch/: apriltag_localization.launch  apriltag_localization_nodelet.launch  apriltag_localization_with_camera.launch  camera_d435.launch  camera_node.launch  fake_launch.launch
apriltag_localization/src/: common_functions.cpp
apriltag_localization/src/apriltag_localization/: pose_estimator.cpp
apriltag_localization/src/camera_models/include/: ScaramuzzaCamera.h
apriltag_localization/src/camera_models/src/: CameraFactory.cc
apriltag_localization/test/: rk4_test.cpp
apriltag_localization_ros/: CMakeLists.txt  package.xml
config/: cam1.yaml  cam_left.yaml  settings.yaml  tags.yaml
ethz_apriltag2/: CMakeLists.txt
ethz_apriltag2/include/apriltags/: GrayModel.h
ethz_apriltag2/src/: GrayModel.cc
include/apriltag_localization/: pose_estimator.h  pose_system.h
include/apriltag_ros/: common_functions.h
include/kkl/alg/: unscented_kalman_filter.hpp
launch/: apriltag_localization.launch  apriltag_localization_camera_node.launch  apriltag_localization_nodelet.launch  apriltag_localization_with_camera.launch  fake_launch.launch
src/: common_functions.cpp
src/apriltag_localization/: pose_estimator.cpp
src/camera_models/include/: CataCamera.h  EquidistantCamera.h  PinholeCamera.h  PinholeFullCamera.h  ScaramuzzaCamera.h
src/utils/: ros_utils.hpp
test/: rk4_test.cpp
