<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>apriltag_localization_ros</name>
    <version>0.0.1</version>
    <description>
        apriltag localization.
    </description>
    <maintainer email="zhanghairong001@outlook.com">zhanghairong</maintainer>

    <author>Zhang Hairong</author>

    <license>BSD</license>  


    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>apriltag_localization</exec_depend>
    <exec_depend>ethz_apriltag2</exec_depend>



    <export>
        <metapackage/>
    </export>
</package>
